tests/semantic_errors/sasha30_5.tl
-- test case 30.
-- Description : function semantic: declaration without definiton (error)

-- Expected : '5'
require "ifj21" 
global foo : function( string, string ) : string, number
